# kizaru

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  data.ipynb  data_loader.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  docker.yml
bot/: handlers.py  main.py  middleware.py  ratelimit.py  vector_search.py
data/: .gitignore  00_kizaru_lyrics.parquet  data.csv  kizaru_lyrics_prepared.parquet
notebooks/: data.ipynb
parser/: main.py
pipeline/: main.py
pipeline/00_parse/: main.py
pipeline/01_preprocess/: main.py  test_main.py
pipeline/02_chunk/: main.py
pipeline/03_embed/: main.py
pipeline/04_upload/: main.py
prepare/: main.py
