[project]
name = "kizaru"
version = "0.1.0"
description = "An agentic system using Kizaru songs"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
parser = [
    "rauth>=0.7.3",
]
notebooks = [
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pandas>=2.3.0",
    "wordcloud>=1.9.4",
]
